Use Kafka Admin API for management of SCRAM-SHA credentials (#5305)
* Use Kafka Admin API for management of SCRAM-SHA credentials and remove ZooKeeper

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Fix ACL reconciliation when ACLs are not supported & do not configure Zoo from CO

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Review comments SK

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Review comments SK II

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Review comments SK III

Signed-off-by: Jakub Scholz <www@scholzj.com>